--- a/package.json
+++ b/package.json
@@ -23,21 +23,29 @@
     "dropzone": "5.5.1",
     "echarts": "4.2.1",
     "element-ui": "2.13.2",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "file-saver": "2.0.1",
     "fuse.js": "3.4.4",
+    "google-signin-vue": "^1.2.2",
     "js-cookie": "2.2.0",
     "jsonlint": "1.6.3",
     "jszip": "3.2.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "path-to-regexp": "2.4.0",
+    "pdf-parse": "^1.1.1",
     "screenfull": "4.2.0",
     "script-loader": "0.7.2",
     "sortablejs": "1.8.4",
     "tui-editor": "1.3.3",
     "vue": "^2.6.10",
     "vue-count-to": "1.0.13",
+    "vue-google-oauth2": "^1.5.10",
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.4",
     "vuedraggable": "2.20.0",
